# safe_queue

./: .README.md.swp  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml  cmake-ubuntu.yml  test-ubuntu.yml
include/: safe_queue.hpp
src/: .safe_queue.cpp.swp  safe_queue.cpp
tests/: test.cpp
