CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(safe_queue)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_CXX_FLAGS "-Wall -Wextra")

INCLUDE_DIRECTORIES(include)
FILE(GLOB_RECURSE SOURCES "src/*.cpp")

ADD_EXECUTABLE (safe_queue ${SOURCES})

TARGET_LINK_LIBRARIES(safe_queue ${CMAKE_THREAD_LIBS_INIT})
