CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(safe_queue)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_CXX_FLAGS "-Wall -Wextra")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")

INCLUDE_DIRECTORIES(include)
FILE(GLOB_RECURSE SOURCES "src/*.cpp")

ADD_EXECUTABLE(safe_queue ${SOURCES})
TARGET_LINK_LIBRARIES(safe_queue ${CMAKE_THREAD_LIBS_INIT})

# testing
FIND_PACKAGE(Catch2 3 REQUIRED)
ADD_EXECUTABLE(tests "tests/test.cpp")
TARGET_LINK_LIBRARIES(tests ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(tests PRIVATE Catch2::Catch2WithMain)

